Metiendo nuevas caracteristicas al informe

--- a/src/index.yaml
+++ b/src/index.yaml
@@ -12,5 +12,10 @@ indexes:
 
 - kind: PageResult
   properties:
+  - name: user
+  - name: number
+
+- kind: PageResult
+  properties:
   - name: web
   - name: number
