Integrando test de Google en la aplicación

--- a/src/index.yaml
+++ b/src/index.yaml
@@ -14,3 +14,8 @@ indexes:
   properties:
   - name: user
   - name: number
+
+- kind: PageResultGoogle
+  properties:
+  - name: user
+  - name: number
