Modificada estructura de informes, adaptando el informe de ranking

--- a/src/index.yaml
+++ b/src/index.yaml
@@ -15,6 +15,11 @@ indexes:
   - name: user
   - name: number
 
+- kind: PageResult
+  properties:
+  - name: validation_type
+  - name: number
+
 - kind: PageResultGoogle
   properties:
   - name: user
