--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "GoogleAppEngineSDK"]
-	path = GoogleAppEngineSDK
-	url = https://github.com/julioxus/GoogleAppEngineSDK
+[submodule "google_appengine"]
+	path = google_appengine
+	url = https://github.com/julioxus/google_appengine
